# gpio2redis

./: .gitmodules  CMakeLists.txt  README.md  b.sh  deploy.sh
src/: deploy.sh  gpio2redis.cpp  gpio2redis.json  gpio2redis.service
